--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ baseurl: "neckerse.github.io"
 # !! You don't need to change any of the configuration flags below !!
 #
 
-permalink: /:keyword/
+permalink: /:title/
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
